add style on skill

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,8 +1,13 @@
 .header{
+    position: fixed;
     height: 130px;
     display: flex;
     justify-content: space-between;
     border-radius: 0 0 15px 15px;
+    /* From https://css.glass */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.5px);
+    -webkit-backdrop-filter: blur(7.5px);
 }
 
 .imageProfile{
