--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1{
+  font-family: 'Anton', sans-serif;;
+}
+
+h2{
+  font-family: 'Press Start 2P', cursive;
+}
+
+p{
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 a {
