--- a/styles/skill.module.css
+++ b/styles/skill.module.css
@@ -12,21 +12,41 @@
     margin-top: 40px;
     width: 1000px;
     height: 70px;
-    border: 5px solid white;
+    /*border: 5px solid white;*/
     border-radius: 100px;
     display: flex;
     justify-content: space-around;
 }
 
-.optionSkill{
-    height: 100%;
-    width: 100%;
-    font-size: 35px;
-    border-radius: 100px;
+.styleSelected{
+    display: flex;
+    justify-content: center;
+    width: 200px;
+    height: 100px;
+    border-radius: 20px 20px 0 0;
 }
 
-.optionSkill:hover{
-    background-image: linear-gradient(to right, #7b00ff, #5b01b9);
-    color: #131313;
-    transition: 0.5s;
+.imageIcon{
+    display: flex;
+    width: 100px;
+}
+
+.containerSkill{
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.cardDescriptionSkill{
+    width: 170vh;
+    height: 100px;
+    border-radius: 10px;
+}
+
+.barColored{
+    height: 5px;
+    background-image: linear-gradient(to right, #005186, #C16197, #F5D166);
+    border-radius: 10px;
+    margin-inline: 20px;
+    margin-top: 10px;
 }
