--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -1,42 +1,43 @@
-.bannerPage{
+.bannerPage {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 4.5vw;
 }
 
-.circleFromImage{
+.boxTextBanner {
+    width: 900px;
+}
+
+.circleFromImage {
     background-color: #131313;
     margin-top: 100px;
     border-radius: 800px;
 }
 
-.boxTextBanner{
+.programingBro {
     width: 900px;
 }
 
-.programingBro{
-    width: 900px;
-}
-
-@media(min-width: 100px){
-    .programingBro{
-        width: 700px;
+@media only screen and (max-width: 1150px) {
+    .bannerPage {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
-}
 
-@media(max-width: 700px){
-    .boxTextBanner{
-        margin-top: 100px;
+    .bannerPage h1 {
+        font-size: 8vw;
     }
-    .boxTextBanner h1{
-        font-size: 40px;
-    }
-}
 
-@media (max-width: 400px) {
-    .circleFromImage{
+    .circleFromImage {
         background-color: #131313;
-        border-radius: 800px;
-        visibility: hidden;
+        margin-top: 30px;
+        border-radius: 100vw;
+    }
+
+    .programingBro {
+        width: 60vw;
     }
 }
