--- a/styles/skill.module.css
+++ b/styles/skill.module.css
@@ -52,7 +52,7 @@
 }
 
 .description{
-    width: 50%;
+    width: 100%;
     padding: 20px;
     font-size: 35px;
     display: flex;
@@ -61,32 +61,6 @@
     color: #131313;
 }
 
-.projectsCard{
-    width: 50%;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 25px;
+.description > p{
     color: #131313;
-}
-
-.projectsCard h1{
-    font-size: 4vh;
-    color: #131313;
-    margin-bottom: 5px;
-}
-
-
-.projectsCard img{
-    height: 350px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
-}
-
-.projectsCard a{
-    font-size: 30px;
-    color: aliceblue;
-    text-decoration-line: underline;
 }
