--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@1&display=swap');
+
+:root {
+  --color-white: #fff;
+  --color-black: #333;
+  --color-gray: #9e9e9e;
+  --color-gray-disabled: #ffffff;
+  --color-purple: #d8cded;
+  --font-size-small: .75rem;
+  --font-size-default: .875rem;
+}
 
 html,
 body {
@@ -10,19 +21,73 @@ body {
   color: white;
 }
 
-h1{
+@media (max-width: 900px) {
+
+  html,
+  body {
+    width: 130vw;
+  }
+}
+
+@media (max-width: 700px) {
+
+  html,
+  body {
+    width: 150vw;
+  }
+}
+
+@media (max-width: 600px) {
+
+  html,
+  body {
+    width: 190vw;
+  }
+}
+
+@media (max-width: 600px) {
+
+  html,
+  body {
+    width: 220vw;
+  }
+}
+
+@media (max-width: 500px) {
+
+  html,
+  body {
+    width: 280vw;
+  }
+}
+
+@media (max-width: 320px) {
+
+  html,
+  body {
+    width: 320vw;
+  }
+}
+
+@media (max-width: 300px) {
+
+  html,
+  body {
+    width: 400vw;
+  }
+}
+
+
+h1 {
   font-family: 'Anton', sans-serif;
-  color: white;
 }
 
-h2{
+h2 {
   font-family: 'Press Start 2P', cursive;
-  color: white;
 }
 
-p{
-  font-family: 'Source Sans Pro', sans-serif;
-  color: white;
+p {
+  font-family: 'Roboto Mono', monospace;
 }
 
 a {
@@ -36,6 +101,7 @@ a {
 html {
   color-scheme: dark;
 }
+
 body {
   color: white;
   background: black;
