--- a/styles/skill.module.css
+++ b/styles/skill.module.css
@@ -1,66 +1,124 @@
-.cardContainer{
+.cardContainer {
     height: 100%;
     padding: 20px;
     margin: 10px 100px 100px 100px;
     border-radius: 10px;
     background-color: #131313;
     text-align: center;
-    box-shadow: rgba(154, 0, 255, 0.37) 0px 3px 8px;
+    box-shadow: rgba(153, 0, 255, 0.369) 0px 3px 8px;
 }
 
-.selectorSkill{
-    margin-top: 40px;
-    width: 1000px;
-    height: 70px;
-    /*border: 5px solid white;*/
-    border-radius: 100px;
+.progressBar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    margin: 0 0 1rem 0;
 }
 
-.styleSelected{
-    display: flex;
-    justify-content: center;
-    width: 200px;
-    height: 100px;
-    border-radius: 20px 20px 0 0;
+.progressBar li {
+    flex: 2;
+    position: relative;
+    padding: 0 0 14px 0;
+    font-size: var(--font-size-default);
+    line-height: 1.5;
+    color: var(--color-black);
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: visible;
+    min-width: 0;
+    text-align: center;
+    border-bottom: 2px solid var(----color-white);
 }
 
-.imageIcon{
-    display: flex;
-    width: 100px;
+.progressBar li:first-child,
+.progressBar li:last-child {
+    flex: 1;
 }
 
-.containerSkill{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
+.progressBar li:last-child {
+    text-align: right;
 }
 
-.cardDescriptionSkill{
-    width: 170vh;
-    height: 100%;
-    border-radius: 10px;
+.progressBar li:before {
+    content: "";
+    display: block;
+    width: 15px;
+    height: 15px;
+    background-color: var(----color-white);
+    border-radius: 50%;
+    border: 2px solid var(--color-white);
+    position: absolute;
+    left: calc(50% - 6px);
+    bottom: -7px;
+    z-index: 3;
+    transition: all .2s ease-in-out;
 }
 
-.barColored{
-    height: 5px;
-    background-image: linear-gradient(to right, #005186, #C16197, #F5D166);
-    border-radius: 10px;
-    margin-inline: 20px;
-    margin-top: 10px;
+.progressBar li:first-child:before {
+    left: 0;
 }
 
-.description{
+.progressBar li:last-child:before {
+    right: 0;
+    left: auto;
+}
+
+.progressBar span {
+    transition: opacity .3s ease-in-out;
+}
+
+.progressBar li:not(.isActive) span {
+    opacity: 0;
+}
+
+.progressBar .isComplete:not(:first-child):after,
+.progressBar .isActive:not(:first-child):after {
+    content: "";
+    display: block;
     width: 100%;
-    padding: 20px;
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #131313;
+    position: absolute;
+    bottom: -2px;
+    left: -50%;
+    z-index: 2;
+    border-bottom: 5px solid var(--color-black);
+    border-radius: 5px;
 }
 
-.description > p{
-    color: #131313;
+.progressBar li:last-child span {
+    width: 200%;
+    display: inline-block;
+    position: absolute;
+    left: -100%;
+}
+
+.progressBar .isComplete:last-child:after,
+.progressBar .isActive:last-child:after {
+    width: 200%;
+    left: -100%;
+}
+
+.progressBar .isComplete:before {
+    background-color: var(--color-black);
+}
+
+.progressBar .isActive:before {
+    background-color: var(--color-white);
+    border-color: var(--color-black);
+}
+
+.progressBar li:hover:before,
+.progressBar .is-hovered:before {
+    background-color: var(--color-gray);
+    border-color: var(--color-black);
+}
+
+.progressBar li:hover:before,
+.progressBar .is-hovered:before {
+    transform: scale(1.33);
+}
+
+.progressBar li:hover span,
+.progressBar li.is-hovered span {
+    opacity: 1;
 }
