--- a/styles/skill.module.css
+++ b/styles/skill.module.css
@@ -1,3 +1,10 @@
+.title {
+    font-size: 6vw;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+}
+
 .cardContainer {
     height: 100%;
     padding: 20px;
@@ -6,6 +13,18 @@
     background-color: #131313;
     text-align: center;
     box-shadow: rgba(153, 0, 255, 0.369) 0px 3px 8px;
+}
+
+@media (min-width: 750px) {
+    .title {
+        font-size: 3.5vw;
+    }
+}
+
+@media (min-width: 1150px) {
+    .title {
+        font-size: 3vw;
+    }
 }
 
 .progressBar {
