--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -38,11 +38,11 @@
     .headerBox {
         width: 50px;
         height: 50px;
-        background-color: aliceblue;
         border-radius: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
+        border: 2px rgb(179, 179, 179) solid;
     }
 
 }
@@ -55,6 +55,6 @@
 
 @media only screen and (max-width: 600px) {
     .headerItem {
-        margin-left: 85%;
+        margin-left: 82%;
     }
 }
