--- a/styles/skill.module.css
+++ b/styles/skill.module.css
@@ -41,13 +41,13 @@
     padding: 0 0 14px 0;
     font-size: var(--font-size-default);
     line-height: 1.5;
-    color: var(--color-black);
+    color: #fff;
     font-weight: 600;
     white-space: nowrap;
     overflow: visible;
     min-width: 0;
     text-align: center;
-    border-bottom: 2px solid var(----color-white);
+    border-bottom: 2px solid transparent;
 }
 
 .progressBar li:first-child,
@@ -64,7 +64,6 @@
     display: block;
     width: 15px;
     height: 15px;
-    background-color: var(----color-white);
     border-radius: 50%;
     border: 2px solid var(--color-white);
     position: absolute;
@@ -100,7 +99,7 @@
     bottom: -2px;
     left: -50%;
     z-index: 2;
-    border-bottom: 5px solid var(--color-black);
+    border-bottom: 5px solid var(--color-white);
     border-radius: 5px;
 }
 
@@ -118,7 +117,7 @@
 }
 
 .progressBar .isComplete:before {
-    background-color: var(--color-black);
+    background-color: rgb(176, 176, 176);
 }
 
 .progressBar .isActive:before {
