--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -31,12 +31,12 @@
         display: flex;
     }
 
-    .headerItem {
+    /*     .headerItem {
         margin-left: 93%;
         margin-top: 15px;
-    }
+    } */
 
-    .headerBox {
+    /*     .headerBox {
         width: 50px;
         height: 50px;
         border-radius: 100px;
@@ -44,7 +44,7 @@
         justify-content: center;
         align-items: center;
         border: 2px rgb(179, 179, 179) solid;
-    }
+    } */
 
 }
 
