--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -4,6 +4,12 @@
     border-radius: 10px;
     border: 2px solid rgb(55 65 81);
     cursor: pointer;
+    margin: 5px;
+}
+
+.cardProjectItem:hover {
+    scale: 1.01;
+    transition: 0.3s;
 }
 
 .swiperScreenMid,
@@ -46,8 +52,7 @@
     }
 
     .cardProjectItem {
-        width: 90vw;
-        padding: 10px;
+        width: 85vw;
         border-radius: 10px;
     }
 
